--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
 /************NAV BAR************************/
 .navbar{
-    height: 90px;
+    height: 85px;
     width: 100%;
     background-color: #FFFFFF;
-    display: flex;
-    flex-direction: row;
 }
 .logonav{
-    margin-left: 10%;
-    margin-top: 15px;
-    margin-bottom: 20px;
-    
+    height: 70px;  
 }
 .navitems{
     list-style: none;
@@ -19,16 +19,20 @@
    cursor: pointer;
 
 }
+.navbar ul li:first-child{
+    color: #75A0E1;
+}
 .navitems:hover{
-   color:#006D77 ;
+   color:#75A0E1 ;
 
 }
-ul{
+.navbar ul{
     margin-top: 25px;
-    padding-left: 15%;
+    /* padding-left: 15%; */
     display: flex;
+    flex-direction: row;
     gap:30px;
-    margin-right: 10%;
+    /* margin-right: 15%; */
 }
 .after::after {
         display: inline-block;
@@ -40,50 +44,81 @@ ul{
         transition: 0.3s ease;
 }
 .btnNav{
-    height: 20px;
+    text-align: center;
+    /* height: 16px; */
     width: auto;
-    background-color: #BEE1E6;
-    border-radius: 10px;
-    /* padding-left: 30px;
-    padding-right:30px; */
-    padding: 12px;
-    font-weight: bold;
-    margin-top: 15px;
+    background-color: #75A0E1;
+    border-radius: 5px;
+    padding: 10px;
+    /* font-weight: bold; */
+    font-size: small;
+    color: white;
+    /* margin-top: 16px; */
     box-shadow: 0px 5px rgba(175, 174, 174, 0.227) ;
     cursor: pointer;
 }
 .fa-bars{
     cursor: pointer;
     font-size: 30px;
-    margin-left: 8%;
-    margin-top: 20px;
+}
+@media screen and (max-width: 600px){
+    #ulbar{
+        display: none;
+    }
+    .logonav{
+        width: 170px;
+        height: 60px;
+    }
+    .btnNav{
+        text-align: center;
+        /* height: 16px; */
+        /* width: auto; */
+        background-color: #75A0E1;
+        border-radius: 5px;
+        padding: 10px;
+        /* font-weight: bold; */
+        font-size: small;
+        color: white;
+        margin-left: 80px;
+        box-shadow: 0px 5px rgba(175, 174, 174, 0.227) ;
+        cursor: pointer;
 
+    }
+    .fa-bars{
+        cursor: pointer;
+        font-size: 30px;
+        margin-left: 35px;
+    }
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        padding-top: 20px;
+    }
 }
 /*******************container*****************************/
-.container{
-    background-color: #BEE1E6;
-    height: 700px;
-    width: 100%;
+#container{
+    height: 600px;
+    background-color: #E1F3FF;
     padding-top: 100px;
-    display: flex;
-
+    justify-content: center;
     
 }
-.cont1{
+/* .cont1{
     margin-left: 10%;
     width: 35%;
-}
+} */
 h1{
+    margin-top: 30px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 53px;
 }
 .btn1{
-    background-color: #006D77;
-    width: 28%;
+    background-color: #75A0E1;
+    /* width: 16%; */
     text-align: center;
-    padding: 5px;
-    border-radius: 10px;
+    padding: 7px;
+    border-radius: 15px;
     color: #FFFFFF;
     font-family: Arial;
     font-size: small;
@@ -92,22 +127,16 @@ h1{
 
 
 }
-
-
-
 .btn3{
-    width: auto;
-    border: 1px solid #006D77;
+    color: #75A0E1;
+    border: 2px solid #75A0E1;
     border-radius: 5px;
-    /* padding-left: 30px;
-    padding-right:30px; */
     padding: 15px;
-   font-size: smaller;
+    font-size: smaller;
     margin-top: 15px;
     box-shadow: 0px 5px rgba(175, 174, 174, 0.227) ;
     font-family:Arial, Helvetica, sans-serif;
     cursor: pointer;
-
 }
 
 .btns{
@@ -115,16 +144,18 @@ h1{
     gap: 10%;
     
 }
-.cont-img{
-    margin-left: 10%;
+.cont-img img{
+    width: 100%;
 }
-p{
-    color: #88a0a2;
+ .p1{
+    text-align: justify;
+    margin-top: 30px;
+    color: #4f5151;
+    font-size: 15px;
 }
-.btn2{
+#btn2{
     cursor: pointer;
-    width: auto;
-    background-color: #000000;
+    background-color: #75A0E1;
     color: #FFFFFF;
     border-radius: 5px;
     /* padding-left: 30px;
@@ -134,4 +165,93 @@ p{
     margin-top: 15px;
     box-shadow: 0px 5px rgba(175, 174, 174, 0.227) ;
     font-family:Arial, Helvetica, sans-serif;
+}
+.section1{
+    margin-top: 100px;
+    
+}
+
+.gardy{
+    margin-top: 40px;
+    display: flex;
+    gap: 10px;
+}
+.pgardy{
+    font-size: small;
+    margin-left: 60px;
+    text-align:justify;
+}
+.h2{
+    letter-spacing: 0px;
+    font-weight: bold;
+    font-family: "Arial, Helvetica", sans-serif;
+    margin-top: 20px;
+}
+.name-p{
+    font-weight: bold;
+    font-size: 20px;
+}
+#img2{
+    width: 85%;
+}
+#h2-1{
+    font-size: xx-large;
+    letter-spacing: 0px;
+    font-weight: bolder;
+    font-family: "Arial, Helvetica", sans-serif;
+    text-align: center;
+}
+#section2{
+    margin-top: 120px;
+}
+#pcenter{
+    text-align: center;
+    margin-top: 15px;
+    color: #4f5151;
+    font-size: 13px;
+    margin-bottom: 50px;
+}
+.imgs{
+    width: 50px;
+    height: 50px;
+}
+.ml{
+    margin-left: 40px;
+}
+.ul-foot{
+    text-align: justify;
+    color: #949b9b;
+    font-size: 13px;
+}
+.ul-foot li i{
+   margin-right: 10px;
+}
+.foot{
+    margin-top: 100px;
+    margin-right: 400px;
+}
+.pena{
+    text-align: left;
+    font-size: 12px;
+    color: #606363;
+    width: 260px;
+}
+.name-pf{
+    font-weight: bold;
+    font-size: 16px;
+}
+footer{
+    height: 100px;
+    background: #75A0E1;
+    text-align: center;
+    margin-top: 50px;
+}
+#lastp{
+    padding-top: 45px;
+    font-size: small;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+.rit{
+    position: relative;
 }
